name:                pure-fetch
version:             0.8.0.0
synopsis:            Fetch with caching decorator
homepage:            purehs.org/doc/pure-fetch
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-fetch.git

library
  exposed-modules:     Pure.Fetch
  build-depends:       base,
                       pure-async,
                       pure-cache,
                       pure-core,
                       pure-default,
                       pure-try
  hs-source-dirs:      src
  default-language:    Haskell2010
